# cortex

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  api.py  config.toml  config.toml.example  cortex.py  example.py  example_compare.py  pyproject.toml  test_flowchart.py
.antigravity/: rules.md
Figures/: cortex-full-flow.drawio  cortex-system-design.drawio  replanner-logic.drawio
app/: config.py
app/agents/base/: base.py  base_agent.py  try.py
app/agents/executor/: executor_agent.py  prompts.py
app/agents/planner/: planner_agent.py  prompts.py
app/sandbox/: Dockerfile  sandbox_manager.py
app/task/: plan.py  task_manager.py
app/tools/: act_toolkit.py  mock_toolkit.py  plan_toolkit.py
docs/plans/: 2026-01-14-base-agent-design.md  2026-01-14-base-agent-implementation.md  2026-01-15-agent-factory-pattern.md  2026-01-15-local-filesystem-design.md  2026-01-15-mcp-tools-implementation.md  2026-01-15-mcp-tools-integration-design.md  2026-01-20-plan-tool-history-design.md  2026-01-21-parallel-executor-design.md  2026-01-26-notes-based-verification-design.md  2026-01-26-notes-based-verification-impl.md  2026-01-26-refactor-dry-logging-design.md  2026-01-26-tool-call-verification-design.md  2026-02-17-executor-decoupling-followups.md
drawio_agent/: .env.sample  __init__.py  _agent.py  _config.py  _prompt.py
drawio_agent/tools/: drawio.py
flowchart_agent/: .env.sample  __init__.py  _agent.py  _config.py  _prompt.py
flowchart_agent/tools/: _manager.py  excalidraw.py
frontend/: package-lock.json
frontend/src/: App.css  App.tsx
general_task/: .env.sample  _agent.py  _config.py  _prompt.py  agent.py
general_task/tools/: __init__.py  _manager.py  audio_transcription.py  calculator.py  docx_writer.py  download_file.py  excel_reader.py  file_reader.py  pdf_reader.py  pptx_reader.py  python_executor.py  submit_final_answer.py  web_browser.py  web_search.py  zip_extractor.py
leed_retrieval/: .env.sample  __init__.py  _agent.py  _config.py  _prompt.py
leed_retrieval/tools/: leed_advisor.py
scripts/: run.sh
tests/: conftest.py  test_config.py  test_cortex.py
tests/sandbox/: test_sandbox_manager.py
tests/task/: test_plan.py  test_task_manager.py
tests/tools/: test_act_toolkit.py  test_plan_toolkit.py
(+42 files in other folders)
